spacing and loader fixes

--- a/src/containers/Pages/Profile/Profile.scss
+++ b/src/containers/Pages/Profile/Profile.scss
@@ -76,9 +76,7 @@ main {
 				width: 95%;
 				& > form {
 					justify-content: space-between;
-					& > .styled-input {
-						margin: .5rem 0;
-					}
+
 					.profile-input-wrapper {
 						width: 100%;
 						height: 100%;
